--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ ol.color {
 }
 .service-icon:hover{
  background: white;
- color:#7FBBDA;
+ color:#CCBBFF;
  transition:.5s;
  cursor:pointer;
 }
@@ -121,7 +121,7 @@ h3.header-text{
   }  
 
 .btn-primary {
-  background-color: #228C87;
+  background-color: #CCAACC;
   border-color: #228989;
 }
 .btn-primary:hover{
@@ -189,7 +189,7 @@ a.header-btn {
 }
 .progress-list li em {
     padding-left: 8px;
-    color: #72b6af;
+    color: #CCAACC;
     font-style: normal;
 }
 .progress-list li em:before {
@@ -217,7 +217,7 @@ a.header-btn {
     color: #ffffff;
     text-align: center;
     text-shadow: none;
-    background: #72b6af;
+    background: #CCAACC;
     -webkit-border-radius: 4px;
     border-radius: 4px;
     -webkit-box-shadow: none;
@@ -313,7 +313,7 @@ transition: all 0.4s ease 0s;
 }
 
 a#menu-toggle:hover {
-    background-color: rgba(75, 194, 184, 1);
+    background-color: #CCCCCC;
 }
 
 #sidebar-wrapper.active {
@@ -349,7 +349,7 @@ a#menu-close:hover {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/bg.jpg) no-repeat center center fixed; 
+  background: url(../img/bg.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -367,7 +367,7 @@ a#menu-close:hover {
 /* Services */
 
 .services {
-  background: #7fbbda;
+  background: #CCBBEE;
   padding: 50px 0;
   color: #ffffff;
 }
@@ -375,7 +375,7 @@ a#menu-close:hover {
 
 @media (min-width: 320px) and (max-width: 1024px) { 
       .services {
-      background: #7fbbda;
+      background: #CCBBEE;
       padding: 50px 0;
       color: #ffffff;
     }
